--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
 	},
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
+	"files": [
+		"dist"
+	],
 	"type": "module",
 	"scripts": {
-		"build": "tsc",
+		"build": "rimraf dist; tsc",
 		"test": "jest"
 	},
 	"dependencies": {},
@@ -31,6 +34,7 @@
 		"@types/node": "^18.7.18",
 		"babel-jest": "^29.0.3",
 		"jest": "^29.0.0",
+		"rimraf": "^3.0.2",
 		"ts-jest": "^29.0.1",
 		"typescript": "^4.0.0"
 	}
