added some package keywords

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
 	"description": "Set Utilities for JavaScript",
 	"license": "MIT",
 	"keywords": [
-		"Sets"
+		"set",
+		"set theory",
+		"math"
 	],
 	"repository": {
 		"type": "git",
