--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 	"type": "module",
 	"scripts": {
 		"build": "rimraf dist; tsc",
+		"lint": "eslint . --ext .ts",
 		"test": "jest"
 	},
 	"dependencies": {},
@@ -34,7 +35,12 @@
 		"@babel/preset-typescript": "^7.18.6",
 		"@types/jest": "^29.0.3",
 		"@types/node": "^18.7.18",
+		"@typescript-eslint/eslint-plugin": "^5.38.0",
+		"@typescript-eslint/parser": "^5.38.0",
 		"babel-jest": "^29.0.3",
+		"eslint": "^8.24.0",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-jsdoc": "^39.3.6",
 		"jest": "^29.0.0",
 		"rimraf": "^3.0.2",
 		"ts-jest": "^29.0.1",
