added code coverage testing
Added code coverage testing. Adding more unit tests & corrected function syntax until coverage reached 100%.

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"build": "rimraf dist; tsc",
 		"lint": "eslint . --ext .ts",
 		"test": "jest --testPathIgnorePatterns=scale",
+		"test:coverage": "jest --collect-coverage --testPathIgnorePatterns=scale",
 		"test:scale": "jest --testPathPattern=scale"
 	},
 	"dependencies": {},
