--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -204,6 +204,7 @@
 					}
 				],
 				"@typescript-eslint/no-explicit-any": "error",
+				"@typescript-eslint/no-non-null-assertion": "off",
 				"@typescript-eslint/no-shadow": "error",
 				"arrow-body-style": [
 					"error",
