--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,4 +29,9 @@ jobs:
         run: npm run build
 
       - name: Test
-        run: npm run test
+        run: npm run test:coverage
+
+      - name: Post Code Coverage
+        uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
