--- a/.github/workflows/scale-test.yml
+++ b/.github/workflows/scale-test.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - 'main'
+  pull_request:
 
 jobs:
   test:
@@ -26,3 +27,5 @@ jobs:
 
       - name: Scale Test
         run: npm run test:scale
+        env:
+          NODE_OPTIONS: '--max-old-space-size=8192'
