fixed scale tests action (#31)
* fixed scale tests action

* only run scale tests on push main

--- a/.github/workflows/scale-test.yml
+++ b/.github/workflows/scale-test.yml
@@ -26,3 +26,5 @@ jobs:
 
       - name: Scale Test
         run: npm run test:scale
+        env:
+          NODE_OPTIONS: '--max-old-space-size=8192'
