--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 	"scripts": {
 		"build": "tsc",
 		"lint": "eslint . --ext .ts",
+		"postbuild": "eslint --fix dist/**",
 		"prebuild": "rimraf dist",
 		"prepack": "npm run build",
 		"pretest:coverage": "rimraf coverage",
