--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,58 @@
 	"overrides": [
 		{
 			"files": [
-				"*.js",
+				"*.js"
+			],
+			"parserOptions": {
+				"ecmaVersion": "latest",
+				"sourceType": "module"
+			},
+			"env": {
+				"es6": true
+			},
+			"extends": [
+				"eslint:recommended"
+			],
+			"plugins": [
+				"import"
+			],
+			"rules": {
+				"arrow-body-style": [
+					"error",
+					"as-needed"
+				],
+				"arrow-parens": [
+					"error",
+					"as-needed"
+				],
+				"brace-style": "error",
+				"comma-dangle": [
+					"error",
+					"always-multiline"
+				],
+				"func-style": [
+					"error",
+					"declaration"
+				],
+				"import/order": [
+					"error",
+					{
+						"alphabetize": {
+							"order": "asc",
+							"caseInsensitive": true
+						}
+					}
+				],
+				"indent": [
+					"error",
+					"tab"
+				],
+				"max-len": "off",
+				"semi": "error"
+			}
+		},
+		{
+			"files": [
 				"*.ts"
 			],
 			"parserOptions": {
@@ -233,23 +284,10 @@
 				],
 				"indent": [
 					"error",
-					"tab",
-					{
-						"SwitchCase": 1,
-						"FunctionExpression": {
-							"parameters": "off"
-						},
-						"ignoredNodes": [
-							"FunctionExpression > .params[decorators.length > 0]",
-							"FunctionExpression > .params > :matches(Decorator, :not(:first-child))",
-							"ClassBody.body > PropertyDefinition[decorators.length > 0] > .key"
-						]
-					}
+					"tab"
 				],
-				"jsdoc/newline-after-description": "off",
 				"max-len": "off",
 				"no-shadow": "off",
-				"no-underscore-dangle": "off",
 				"semi": "error"
 			}
 		}
