--- a/.github/workflows/scale-test.yml
+++ b/.github/workflows/scale-test.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - 'main'
+  schedule:
+      - cron: '0 0 * * 0'
 
 jobs:
   test:
@@ -14,6 +16,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          ref: 'main'
 
       - name: Setup Node
         uses: actions/setup-node@v3
