updated dev dependencies and configuration

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -72,7 +72,8 @@
 			"extends": [
 				"eslint:recommended",
 				"plugin:@typescript-eslint/eslint-recommended",
-				"plugin:@typescript-eslint/recommended"
+				"plugin:@typescript-eslint/recommended",
+				"plugin:@typescript-eslint/recommended-requiring-type-checking"
 			],
 			"plugins": [
 				"@typescript-eslint",
