--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
 	"type": "module",
 	"sideEffects": false,
 	"scripts": {
-		"build": "tsc",
+		"build": "tsc --build tsconfig.src.json",
 		"lint": "eslint src test",
 		"postbuild": "eslint --fix dist",
 		"prebuild": "rimraf dist",
@@ -51,16 +51,14 @@
 	},
 	"dependencies": {},
 	"devDependencies": {
-		"@babel/core": "^7.19.1",
-		"@babel/preset-env": "^7.19.1",
-		"@babel/preset-typescript": "^7.18.6",
-		"@typescript-eslint/eslint-plugin": "^5.38.0",
-		"@typescript-eslint/parser": "^5.38.0",
-		"babel-jest": "^29.0.3",
-		"eslint": "^8.24.0",
-		"eslint-plugin-import": "^2.26.0",
-		"jest": "^29.0.0",
-		"rimraf": "^3.0.2",
-		"typescript": "^4.0.0"
+		"@typescript-eslint/eslint-plugin": "^7.10.0",
+		"@typescript-eslint/parser": "^7.10.0",
+		"eslint": "^8.57.0",
+		"eslint-plugin-import": "^2.29.1",
+		"jest": "^29.7.0",
+		"rimraf": "^5.0.7",
+		"ts-jest": "^29.1.3",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.0.0"
 	}
 }
