--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,8 +2,10 @@ name: Build & Test
 
 on:
   push:
+  pull_request:
+    types: [ opened, synchronize, reopened, ready_for_review ]
   schedule:
-      - cron: '0 0 * * 0'
+    - cron: '0 0 * * 0'
 
 jobs:
   test:
@@ -11,12 +13,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Branch
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           cache: 'npm'
           cache-dependency-path: 'package-lock.json'
