--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,10 @@
 				"import"
 			],
 			"rules": {
+				"array-bracket-spacing": [
+					"error",
+					"always"
+				],
 				"arrow-body-style": [
 					"error",
 					"as-needed"
@@ -50,6 +54,16 @@
 					"tab"
 				],
 				"max-len": "off",
+				"no-shadow": "error",
+				"no-var": "error",
+				"no-void": "error",
+				"no-undefined": "error",
+				"object-curly-spacing": [
+					"error",
+					"always"
+				],
+				"prefer-const": "error",
+				"prefer-template": "error",
 				"quotes": [
 					"error",
 					"single"
@@ -266,6 +280,10 @@
 				"@typescript-eslint/no-explicit-any": "error",
 				"@typescript-eslint/no-non-null-assertion": "off",
 				"@typescript-eslint/no-shadow": "error",
+				"array-bracket-spacing": [
+					"error",
+					"always"
+				],
 				"arrow-body-style": [
 					"error",
 					"as-needed"
@@ -295,6 +313,15 @@
 				],
 				"max-len": "off",
 				"no-shadow": "off",
+				"no-var": "error",
+				"no-void": "error",
+				"no-undefined": "error",
+				"object-curly-spacing": [
+					"error",
+					"always"
+				],
+				"prefer-const": "error",
+				"prefer-template": "error",
 				"quotes": [
 					"error",
 					"single"
